Found why nav bar had odd alignment, div col class changed to row, resolved alignment issue

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -33,9 +33,7 @@ font-family: 'Montserrat', sans-serif;
 margin: 0px;
 }
 
-div .top_menu{
-  margin-right: 40px;
-}
+
 
 #navbar {
   background-color:#ffffff;
@@ -51,7 +49,6 @@ height: 60px;
 display: flex;
 position: fixed;
 top: 0px;
-margin-right: 20px;
 background-color: white;
 }
 
@@ -71,7 +68,8 @@ background: #fff;
 display: flex;
 justify-content: space-between;
 align-items: center;
-padding: 0;
+padding-left: 40px;
+padding-right: 40px;
 box-shadow: 0 1px 1px rgba(0,0,0,0.1);
 }
 
@@ -163,7 +161,7 @@ and (-webkit-min-device-pixel-ratio: 3) {
     display: none;
   }
 
-  .hamburger{
+  #hamburger{
     display: none;
   }
 
